<resources>
    <string name="app_name">Popular Movies</string>
    <string name="poster_placeholder">Poster placeholder</string>
    <string name="no_internet">Make sure you are connected to the internet!</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot_synopsis">Plot Synopsis:</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="trailer_name_placeholder">Trailer Name</string>
    <string name="content_placeholder">Content Placeholder</string>
    <string name="author_placeholder">Author Placeholder</string>
    <string name="error_insert_failed_into">Failed to insert row into</string>
    <string name="error_unkown_uri">Unknown uri:</string>
    <string name="error_remove_from_favorites">Couldn\'t remove movie from favorites!</string>
    <string name="success_removed_from_favorites">Removed from favorites!</string>
    <string name="success_added_to_favorites">Added to favorites!</string>
    <string name="error_adding_to_favorites">Couldn\'t add movie to favorites!</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="share_movie_trailer">Share Movie Trailer</string>
    <string name="share">Share</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>

    <string-array name="sort_types">
        <item>Most Popular</item>
        <item>Highest Rated</item>
        <item>Favorites</item>
    </string-array>
</resources>
